--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="https://bit.ly/3sC1KGF" target="_blank">Лабораторная работа №1: Введение в систему контроля версий Git и сервис GitHub</a></li>
         <li><a href="https://bit.ly/3LjrU7y" target="_blank">Лабораторная работа №2: Расширенное взаимодействие с Git</a></li>
         <li><a href="https://bit.ly/44ZhaSK" target="_blank">Лабораторная работа №3: Автоматизация рабочих процессов с использованием Git и Github</a></li>
-        <li><a href="https://bit.ly/48FsyXk" target="_blank">Лабораторная работа №4: Интеграция CI с использованием GitHub Actions</a></li>
+        <li><a href="https://bit.ly/3Zb1QDA" target="_blank">Лабораторная работа №4: Интеграция CI с использованием GitHub Actions</a></li>
         <li><a href="https://bit.ly/46CAbeY" target="_blank">Лабораторная работа №5: Continuous Delivery с использованием GitHub Actions</a></li>
         <li><a href="https://bit.ly/3PXAaf2" target="_blank">Лабораторная работа №6: Автоматическое семантическое версионирование с использованием GitHub Actions</a></li>
     </ul>
